# autoanki

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
autoanki/: __init__.py  backend.py  config.py  create.py
examples/: ebird_parser.py
examples/avian_taxonomy/: README.md  generate_data.py
examples/bird_taxonomy/: generate_data.py
examples/birds_of_peru/: README.md  generate_data.py
examples/birds_of_region/: generate_data.py
examples/birds_of_the_usa/: generate_data.py
examples/json_to_basic/: create_and_add.py
examples/organic_chem/: generate_deck.py
tests/: test_backend.py  test_create.py
tests/.fake_anki_bak/User 1/: collection.anki2
tests/fake_anki/User 1/: collection.anki2  collection.media.db2
tests/reference/: collection.anki2.bak  collection.bak
