[project]
name = "autoanki"
version = "0.1.0"
authors = [
  { name="Vincent Luczkow", email="vincent.luczkow@gmail.com" },
]
description = "Tools for interacting Anki decks."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "anki==24.06",
]

[project.optional-dependencies]
dev = [
    "uv>=0.11.15",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]

[project.urls]
"Homepage" = "https://github.com/vluzko/autoanki"
"Bug Tracker" = "https://github.com/vluzko/autoanki/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
